# PTZ_ICOND

./: CMakeLists.txt  CMakeLists.txt~
data/color/: skincolormodel_Irg
data/detectors/: motionBlobDetector.txt
data/facerec/: baseList.txt~
data/filters/: motion_monitoring_icond.txt  sir.txt
data/objectslist/: ColorBaseList.txt  twoDDetectorList.txt
data/shapes/: Makefile
data/targets/: bodyROI.txt  bodyROI.txt~  bodyTracking.txt  bodyTracking.txt~  faceTracking2.txt  fullBodyROI_c.txt  fullBodyROI_m.txt  motionMonitoring.txt
dep/lib/: lib2ddetector.la  lib2ddetector.so.0.0.0  libbspline.la  libbspline.so.0.0.0  libcolordistr.la  libcolordistr.so.0.0.0  libcolorutils.la  libcolorutils.so.0  libcolorutils.so.0.0.0  libcolsegmentation.la  libcolsegmentation.so.0.0.0  libdynamics.la  libdynamics.so.0  libdynamics.so.0.0.0  libfilters.la  libfilters.so.0  libfilters.so.0.0.0  libgaussian.la  libgaussian.so.0  libgaussian.so.0.0.0  libimageutils.la  libimageutils.so.0  libimageutils.so.0.0.0  libimgproducer.la  libimgproducer.so.0  libimgproducer.so.0.0.0  liblikelihood.la  liblikelihood.so.0.0.0  libmisc.la  libmisc.so.0  libmisc.so.0.0.0  libmotiondistr.la  libmotiondistr.so.0.0.0  libopencv_calib3d.so.2.2.0  libopencv_contrib.so.2.2.0  libopencv_core.so.2.2.0  libopencv_features2d.so.2.2.0  libopencv_flann.so.2.2.0  libopencv_gpu.so.2.2.0  libopencv_highgui.so.2.2.0  (+18 more)
src/: ControlPTZ.cpp  ControlPTZ.cpp~  ControlPTZ.h  ControlPTZ.h~  CorrectorPID.cpp  CorrectorPID.h  PTZ_ICOND.cpp  PTZ_ICOND.cpp~  StreamRTSP.cpp  StreamRTSP.cpp~  StreamRTSP.h  StreamRTSP.h~
(+1359 files in other folders)
